@@ -1,5 +1,7 @@
 #!/usr/bin/env bash
 
+# This will set a CentOS 6.6 box up to serve ozp applications (ozp-rest and front-end apps)
+
 # - - - - - - - - - - - - - - -
 # Installation
 # - - - - - - - - - - - - - - -
@@ -8,8 +10,6 @@
 # Remi dependency on CEntOS 6
 sudo rpm -Uvh http://dl.fedoraproject.org/pub/epel/6/i386/epel-release-6-8.noarch.rpm
 sudo rpm -Uvh http://rpms.famillecollet.com/enterprise/remi-release-6.rpm
-
-sudo yum --enablerepo=remi,remi-test
 
 # elasticsearch
 sudo rpm --import https://packages.elasticsearch.org/GPG-KEY-elasticsearch
@@ -26,13 +26,13 @@ sudo rpm --import https://packages.elasticsearch.org/GPG-KEY-elasticsearch
 sudo yum install epel-release
 
 # remove old mysql
-sudo yum remove mysql mysql-*
+sudo yum remove mysql mysql-* -y
 
 # Install packages
-sudo yum install mysql mysql-server java-1.7.0-openjdk java-1.7.0-openjdk-devel tomcat elasticsearch nodejs npm nginx git -y
+sudo yum --enablerepo=remi,remi-test install mysql mysql-server java-1.7.0-openjdk java-1.7.0-openjdk-devel tomcat elasticsearch nodejs npm nginx git -y
 
-# Install newman (for adding test data) and http-server
-sudo npm install -g newman http-server
+# Install newman (for adding test data)
+sudo npm install -g newman
 
 
 # - - - - - - - - - - - - - - -
@@ -43,8 +43,8 @@ sudo npm install -g newman http-server
 sudo sed -i '/#cluster.name: elasticsearch/c\cluster.name: ozpdemo04' /etc/elasticsearch/elasticsearch.yml
 
 # create the temp directory used by elasticsearch and set permissiosn
-sudo mkdir -p /usr/share/tomcat7/temp
-sudo chown -R tomcat7 /usr/share/tomcat7/temp
+sudo mkdir -p /usr/share/tomcat/temp
+sudo chown -R tomcat /usr/share/tomcat/temp
 
 # Start automatically on boot
 sudo chkconfig --add elasticsearch
@@ -61,6 +61,7 @@ sudo service elasticsearch start
 # remove Test database
 # remove anonymous users
 # disable root login remotely
+sudo /etc/init.d/mysqld start
 /usr/bin/mysql_secure_installation
 
 # start mysql on boot
@@ -81,30 +82,38 @@ mysql -u root -ppassword -Bse "grant all privileges on *.* to 'ozp'@'localhost';
 # TODO: start tomcat on boot
 
 # create directory to hold images
-sudo mkdir -p /usr/share/tomcat7/images
-sudo chown -R tomcat /usr/share/tomcat7/images/
+sudo mkdir -p /usr/share/tomcat/images
+sudo chown -R tomcat /usr/share/tomcat/images/
 
-# increase tomcat7 memory from 128MB to 512MB in /etc/tomcat/tomcat.conf - look for JAVA_OPTS
+# increase tomcat memory from 128MB to 512MB in /etc/tomcat/tomcat.conf - look for JAVA_OPTS
 # in the same file, append this to the same place (JAVA_OPTS): -XX:MaxPermSize=256m
+# Line should read: JAVA_OPTS="-Xminf0.1 -Xmaxf0.3 -Xmx512m -XX:MaxPermSize=256m"
 
 # add user 'tomcat' to /etc/tomcat/tomcat-users.xml (for logging into the tomcat web application manager)
 # <user name="tomcat" password="password" roles="admin,manager-gui" />
 
-# copy MarketplaceConfig.groovy to tomcat
+# clone some stuff for setup files and whatnot
 git clone https://github.com/ozone-development/dev-tools.git
 git clone https://github.com/ozone-development/ozp-rest.git
 
+# copy MarketplaceConfig.groovy to tomcat
 sudo cp dev-tools/build-and-deploy/configs/ozp-rest/MarketplaceConfig.groovy /usr/share/tomcat/lib
+sudo chown tomcat /usr/share/tomcat/lib/MarketplaceConfig.groovy
 
 # copy OzoneConfig.properties to tomcat
 sudo cp dev-tools/build-and-deploy/configs/ozp-rest/OzoneConfig.properties /usr/share/tomcat/lib
+sudo chown tomcat /usr/share/tomcat/lib/OzoneConfig.properties
 
 # copy the security plugin files to tomcat
 sudo cp -r ozp-rest/grails-app/conf/ozone-security-beans /usr/share/tomcat/lib
 sudo cp ozp-rest/grails-app/conf/SecurityContext.xml /usr/share/tomcat/lib
 sudo cp ozp-rest/grails-app/conf/users.properties /usr/share/tomcat/lib
 
-# update /var/lib/tomcat7/conf/server.xml, specifically the Connector for
+sudo chown tomcat /usr/share/tomcat/lib/ozone-security-beans
+sudo chown tomcat /usr/share/tomcat/lib/SecurityContext.xml
+sudo chown tomcat /usr/share/tomcat/lib/users.properties
+
+# update /usr/share/tomcat/conf/server.xml, specifically the Connector for
 # port 8443 (this assumes the password to the keystore file is 'password'):
 
 # <Connector port="8443" protocol="HTTP/1.1" SSLEnabled="true"
@@ -145,8 +154,24 @@ echo "keytool -importkeystore -deststorepass password -destkeypass password -des
 # copy keystore file to java place: 
 echo "sudo cp server.keystore /usr/share/tomcat"
 # copy other keys to nginx place
-echo "sudo cp server.crt /etc/nginx/ssl"
-echo "sudo cp server.key /etc/nginx/ssl"
+echo "sudo cp server.crt /etc/nginx/ssl/"
+echo "sudo cp server.key /etc/nginx/ssl/"
+
+sudo chown -R nginx /etc/nginx/ssl
 
 # configure firewall as per
 # https://www.digitalocean.com/community/tutorials/how-to-setup-a-basic-ip-tables-configuration-on-centos-6
+sudo iptables -A INPUT -p tcp -m tcp --dport 8443 -j ACCEPT
+sudo iptables -A INPUT -p tcp -m tcp --dport 7799 -j ACCEPT
+sudo iptables -L -n
+sudo iptables-save | sudo tee /etc/sysconfig/iptables
+sudo service iptables restart
+
+# make deployment directory
+sudo mkdir /ozp-static-deployment
+sudo mkdir /ozp-static-deployment/center
+sudo mkdir /ozp-static-deployment/hud
+sudo mkdir /ozp-static-deployment/webtop
+sudo mkdir /ozp-static-deployment/demo_apps
+sudo mkdir /ozp-static-deployment/iwc
+
